--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "apollo-client": "2.6.10",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
+    "node-sass": "^4.14.1",
     "typescript": "3.8.3"
   },
   "scripts": {
